cmake_minimum_required(VERSION 2.8)
project( CameraCapture )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( CameraCapture capture_test.cpp )
target_link_libraries( CameraCapture ${OpenCV_LIBS} exiv2)
link_directories(/usr/local/lib)
set (CMAKE_CXX_FLAGS "-std=gnu++11 -pthread")
